Starting to position and add content

--- a/index.html
+++ b/index.html
@@ -6,41 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>TNW</title>
   </head>
   <body>
     <div class="top-nav">
       <nav>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>News</li>
+          <li>Events</li>
+          <li>Business</li>
+          <li>AMAs</li>
+          <li>Spaces</li>
+          <li>Terms and Conditions</li>
         </ul>
       </nav>
     </div>
+    <nav>
+      <div class="top-nav-right">
+        <ul>
+          <li>About</li>
+          <li>Team</li>
+          <li>Advertise</li>
+          <li>Jobs</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <br />
     <div class="nav-2">
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>LATEST</li>
+        <li>HARD FORK</li>
+        <li>PLUGGED</li>
+        <li>FUNDAMENTALS</li>
+        <li>WORK 2030</li>
       </ul>
     </div>
     <section class="main">
-      <article></article>
-      <article></article>
-      <article></article>
+      <div class="art-1">
+        <article></article>
+      </div>
+      <div class="art-2">
+        <article></article>
+      </div>
+      <div class="art-3">
+        <article></article>
+      </div>
     </section>
   </body>
 </html>
