content and positions being added

--- a/index.html
+++ b/index.html
@@ -48,13 +48,33 @@
     </div>
     <section class="main">
       <div class="art-1">
-        <article></article>
+        <article>
+          <h1>TNW</h1>
+          <h5>Tuesday - December 3, 2019</h5>
+          <h6>TECH</h6>
+          <h2>Don't trust Google Chrome's Incognito mode</h2>
+          <p>by Ben Dickson</p>
+        </article>
       </div>
       <div class="art-2">
-        <article></article>
+        <article>
+          <h6>INSIGHTS</h6>
+          <h2>
+            Telegram shills refuse to accept OneCoin is a scam as websites go
+            offline
+          </h2>
+          <p>by Matthew Beedham</p>
+        </article>
       </div>
       <div class="art-3">
-        <article></article>
+        <article>
+          <h6>TECH</h6>
+          <h2>
+            Facebook's new chatbot teaches employees how to answer difficult
+            questions about the company
+          </h2>
+          <p>by Cara Curtis</p>
+        </article>
       </div>
     </section>
   </body>
