--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </ul>
     </div>
     <section class="main">
-      <div class="art-1">
-        <article>
+      <div class="main-1">
+        <article class="art-1">
           <h1>TNW</h1>
           <h5>Tuesday - December 3, 2019</h5>
           <h6>TECH</h6>
@@ -57,8 +57,8 @@
           <p>by Ben Dickson</p>
         </article>
       </div>
-      <div class="art-2">
-        <article>
+      <div class="main-2">
+        <article class="art-2">
           <h6>INSIGHTS</h6>
           <h2>
             Telegram shills refuse to accept OneCoin is a scam as websites go
@@ -66,9 +66,7 @@
           </h2>
           <p>by Matthew Beedham</p>
         </article>
-      </div>
-      <div class="art-3">
-        <article>
+        <article class="art-3">
           <h6>TECH</h6>
           <h2>
             Facebook's new chatbot teaches employees how to answer difficult
@@ -79,34 +77,33 @@
       </div>
     </section>
     <div class="latest-news">
-      <article>
-        <table>
-          <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </article>
+      <table>
+        <h1>Latest News</h1>
+        <tr>
+          <th><img class="news" src="img/news1.jpg" alt="" /></th>
+          <th><img class="news" src="img/news2.png" alt="" /></th>
+          <th><img class="news" src="img/news3.jpeg" alt="" /></th>
+          <th><img class="news" src="img/news4.png" alt="" /></th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th><img class="news" src="img/news5.jpeg" alt="" /></th>
+          <th><img class="news" src="img/news6.jpeg" alt="" /></th>
+          <th><img class="news" src="img/news7.png" alt="" /></th>
+          <th><img class="news" src="img/news8.jpeg" alt="" /></th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
