latest news added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <div class="latest-news">
       <table>
-        <h1>Latest News</h1>
+        <h1 class="news-title">Latest News ></h1>
         <tr>
           <th><img class="news" src="img/news1.jpg" alt="" /></th>
           <th><img class="news" src="img/news2.png" alt="" /></th>
@@ -86,10 +86,28 @@
           <th><img class="news" src="img/news4.png" alt="" /></th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>
+            <h4>
+              India's IT minister conflates deepake with fake news — and that's
+              naive
+            </h4>
+          </td>
+          <td>
+            <h4>
+              Spotify’s 2019 Wrapped has arrived: Here’s what you need to know
+            </h4>
+          </td>
+          <td>
+            <h4>
+              24 Chinese nationals arrested in Thailand over alleged Bitcoin
+              call center scam
+            </h4>
+          </td>
+          <td>
+            <h4>
+              WhatsApp deactivates Kashimiri accounts after 4-month internet ban
+            </h4>
+          </td>
         </tr>
         <tr>
           <th><img class="news" src="img/news5.jpeg" alt="" /></th>
@@ -98,10 +116,27 @@
           <th><img class="news" src="img/news8.jpeg" alt="" /></th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>
+            <h4>CHEAP: Forget about vacuuming with $200 off the Roomba i7</h4>
+          </td>
+          <td>
+            <h4>
+              Satoshi Nakaboto: ‘Bakkt CEO Kelly Loeffler appointed as US
+              senator’
+            </h4>
+          </td>
+          <td>
+            <h4>
+              Qualcomm's Snapdragon 865 will force manufacturers to buy its 5G
+              modem too
+            </h4>
+          </td>
+          <td>
+            <h4>
+              70 cryptocurrency hedge funds have closed so far this year,
+              investors weary of Bitcoin
+            </h4>
+          </td>
         </tr>
       </table>
     </div>
