added more divs for things

--- a/index.html
+++ b/index.html
@@ -140,5 +140,18 @@
         </tr>
       </table>
     </div>
+    <section class="latest-funding">
+      <header class="funding-title">
+        <h2>Latest funding rounds on index.co</h2>
+        <a href="#">Add info |</a>
+        <a href="#">Get udates by email |</a>
+        <a href="#">See more</a>
+      </header>
+      <div class="funding-rows">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
   </body>
 </html>
